# RIBM4D

./: .gitignore  README.md  bm4d-gpu  sbatch_run.py  test_script.py
BM4D/: bm4d-gpu
BM4D/data/3j7h_avi/: 3j7h_res3_noisy_0.45.avi
BM4D/include/bm4d-gpu/: bm4d.h  kernels.cuh  parameters.h  stopwatch.hpp
BM4D/src/: allreader.cpp  bm4d.cpp  kernels.cu  main.cpp
RIBM4D/: CMakeLists.txt  ribm4d-gpu  texture3d.cu
RIBM4D/include/bm4d-gpu/: bm4d.h  helper_cuda.h  parameters.h
RIBM4D/include/cusoft/: CUOURperms.cuh  CUfft_grids.cuh  CUfft_grids_so3.cuh  CUlegendreTransforms.cuh  CUmakeWigner.cuh  CUnewFCT.cuh  CUoddweights.cuh  CUpermroots.cuh  CUs2_primitive.cuh  CUso3_correlate_sym.cuh  CUsoft_sym.cuh  CUweights.cuh  old_include
RIBM4D/src/: allreader.cpp  bm4d.cu  kernels.cu  main.cpp
RIBM4D/src/cusoft_lib/: CUFFTcode.cu  CUFST_semi_memo.cu  CUOURmods.cu  CUindextables.cu  CUlegendreTransforms.cu  CUmakeWigner.cu  CUmakeweights.cu  CUoddweights.cu  CUs2_primitive.cu  CUutils_so3.cu  CUweights.cu  CUwignerTransforms.cu
data/: convert_mrc.ipynb
data/3j7h_avi/: 3j7h_res3_noisy_0.05.avi  3j7h_res3_noisy_0.10.avi  3j7h_res3_noisy_0.15.avi  3j7h_res3_noisy_0.20.avi  3j7h_res3_noisy_0.25.avi  3j7h_res3_noisy_0.30.avi  3j7h_res3_noisy_0.35.avi  3j7h_res3_noisy_0.40.avi  3j7h_res3_noisy_0.45.avi  3j7h_res3_noisy_0.50.avi
data/3j7h_cropped_center_avi/: 3j7h_center_noisy_0.05.avi  3j7h_center_noisy_0.10.avi  3j7h_center_noisy_0.15.avi  3j7h_center_noisy_0.20.avi  3j7h_center_noisy_0.25.avi  3j7h_center_noisy_0.30.avi  3j7h_center_noisy_0.35.avi  3j7h_center_noisy_0.40.avi  3j7h_center_noisy_0.45.avi  3j7h_center_noisy_0.50.avi  3j7h_center_original.avi
data/3j7h_cropped_random_avi/: 3j7h_random_noisy_0.05.avi  3j7h_random_noisy_0.10.avi  3j7h_random_noisy_0.15.avi  3j7h_random_noisy_0.20.avi  3j7h_random_noisy_0.25.avi  3j7h_random_noisy_0.30.avi  3j7h_random_noisy_0.35.avi  3j7h_random_noisy_0.40.avi  3j7h_random_noisy_0.45.avi  3j7h_random_noisy_0.50.avi  3j7h_random_original.avi
playground/: bm4d-gpu
playground/BM4D/: CMakeLists.txt  bm4d-gpu  surface3d.cu  video_samples
playground/BM4D/data/3j7h_avi/: 3j7h_res3_noisy_0.05.avi  3j7h_res3_noisy_0.30.avi  3j7h_res3_noisy_0.40.avi
playground/BM4D/include/bm4d-gpu/: bm4d.h  kernels.cuh  parameters.h
playground/BM4D/src/: bm4d.cu  kernels.cu  main.cpp
playground/RIBM4D_CUSOFT/: CMakeLists.txt  CMakeLists.txtbackup  bm4d-gpu  surface3d.cu
playground/RIBM4D_CUSOFT/data/: convert_mrc.ipynb
playground/RIBM4D_CUSOFT/data/3j7h_avi/: 3j7h_res3.avi  3j7h_res3_noisy_0.15.avi  3j7h_res3_noisy_0.25.avi
playground/RIBM4D_CUSOFT/include/bm4d-gpu/: bm4d.h  fft_bm4d_tools.cuh  kernels.cuh  parameters.h
playground/RIBM4D_CUSOFT/include/cusoft/: CUFFTcode.cuh  CUFST_semi_memo.cuh  CUOURmods.cuh  CUOURperms.cuh  CUcospmls.cuh  CUindextables.cuh  CUmakeweights.cuh  CUs2_primitive.cuh  CUutils_so3.cuh  CUwignerTransforms.cuh  CUwignerTransforms_sym.cuh  cusoft_kernels.cuh
playground/RIBM4D_CUSOFT/src/: bm4d.cu  cusoft_kernels.cu  fft_bm4d_tools.cu  kernels.cu  main.cpp  ondev_malloc_tmp.c.cu
playground/RIBM4D_CUSOFT/src/cusoft_lib/: CUFST_semi_memo.cu  CUOURmods.cu  CUOURperms.cu  CUcospmls.cu  CUfft_grids.cu  CUfft_grids_so3.cu  CUindextables.cu  CUnewFCT.cu  CUoddweights.cu  CUpermroots.cu  CUs2_primitive.cu  CUso3_correlate_sym.cu  CUsoft_sym.cu  CUweights.cu  CUwignerTransforms_sym.cu
soft20_cpu/: test_soft_fftw_correlate2
soft20_cpu/examples/: test_soft_sym_correlate2.c
